tests/errors/def_func_01.py
from lpython import i32
def func_01(x : str) -> str:
    print(x)

func_01()